// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diff makeConciseFile should expand context with beforeLines and afterLines 1`] = `
" // ...
 describe('glob utilities', () => {
   describe('stripPrefix', () => {
     it('handles trailing slashes', () => {
       expect(stripPrefix('src/', 'src/path.js')).toBe('/path.js');
       expect(stripPrefix('src/', './src/path.js')).toBe('/path.js');
     });
 
     it('should remove prefix from path', () => {
+      expect(true).toBe(false);
       expect(stripPrefix('src', 'src/path.js')).toBe('/path.js');
       expect(stripPrefix('src', './src/path.js')).toBe('/path.js');
       expect(stripPrefix('src', '/path.js')).toBe(undefined);
       expect(stripPrefix('src', '/path.js')).toBe(undefined);
     });
 // ...
     it('should handle empty prefix', () => {
 // ...
   });
 // ...
   describe('globToRegex', () => {
 // ...
     });
 
     it('should convert simple glob patterns', () => {
       const re = globToRegex('*.js');
       expect('/test.js').not.toMatch(re);
       expect('/test.jsx').not.toMatch(re);
     });
-    // TODO: add more test cases
 
     it('should handle directory patterns', () => {
+      expect(true).toBe(false);
       const re = globToRegex('src/*.js');
       expect('/src/test.js').toMatch(re);
       expect('/test.js').not.toMatch(re);
       expect('/test.js').not.toMatch(re);
       expect('/src/subdir/test.js').not.toMatch(re);
     });
 // ...
   });
 });
 // ..."
`;

exports[`diff makeConciseFile should handle beforeLines and afterLines at file boundaries 1`] = `
" 
 import { globToRegex, stripPrefix } from './glob';
 
 describe('glob utilities', () => {
   describe('stripPrefix', () => {
     it('handles trailing slashes', () => {
       expect(stripPrefix('src/', 'src/path.js')).toBe('/path.js');
       expect(stripPrefix('src/', './src/path.js')).toBe('/path.js');
     });
 
     it('should remove prefix from path', () => {
+      expect(true).toBe(false);
       expect(stripPrefix('src', 'src/path.js')).toBe('/path.js');
       expect(stripPrefix('src', './src/path.js')).toBe('/path.js');
       expect(stripPrefix('src', '/path.js')).toBe(undefined);
       expect(stripPrefix('src', '/path.js')).toBe(undefined);
     });
 
     it('should handle empty prefix', () => {
       expect(stripPrefix('', 'src/path.js')).toBe('/src/path.js');
       expect(stripPrefix('', './src/path.js')).toBe('/src/path.js');
       expect(stripPrefix('', '/src/path.js')).toBe('/src/path.js');
     });
 
     it('should handle exact matches', () => {
       expect(stripPrefix('src', 'src')).toBe('/');
       expect(stripPrefix('src', './src')).toBe('/');
       expect(stripPrefix('src', '/src')).toBe('/');
     });
 
     it("returns undefined if the path doesn't begin with the prefix specified", () => {
       expect(stripPrefix('src', 'other/path.js')).toBe(undefined);
     });
   });
 
   describe('globToRegex', () => {
     it('should convert glob patterns to regex', () => {
       expect(globToRegex('*.js').test('/test.js')).toBe(true);
       expect(globToRegex('*.js').test('/test.txt')).toBe(false);
       expect(globToRegex('**/*.js').test('/src/test.js')).toBe(true);
       expect(globToRegex('**/src/*.js').test('/src/test.js')).toBe(true);
       expect(globToRegex('**/*.js').test('/test.js')).toBe(true);
       expect(globToRegex('**/*.js').test('/src/subdir/test.js')).toBe(true);
     });
 
     it('matches everything on empty path', () => {
       expect(globToRegex('').test('/src/subdir/test.js')).toBe(true);
       expect(globToRegex('**').test('/src/subdir/test.js')).toBe(true);
     });
 
     it('should convert simple glob patterns', () => {
       const re = globToRegex('*.js');
       expect('/test.js').not.toMatch(re);
       expect('/test.jsx').not.toMatch(re);
     });
-    // TODO: add more test cases
 
     it('should handle directory patterns', () => {
+      expect(true).toBe(false);
       const re = globToRegex('src/*.js');
       expect('/src/test.js').toMatch(re);
       expect('/test.js').not.toMatch(re);
       expect('/test.js').not.toMatch(re);
       expect('/src/subdir/test.js').not.toMatch(re);
     });
 
     it('should handle double star patterns', () => {
       const re = globToRegex('src/**/*.js');
       expect('/src/test.js').toMatch(re);
       expect('/src/subdir/test.js').toMatch(re);
       expect('/test.js').not.toMatch(re);
     });
 
     it('should handle dot files', () => {
       const re = globToRegex('.env*');
       expect('/.env').toMatch(re);
       expect('/.env.local').toMatch(re);
       expect('/env').not.toMatch(re);
     });
 
     it('should handle multiple extensions', () => {
       const re = globToRegex('*.{js,ts}');
       expect('/test.js').toMatch(re);
       expect('/test.ts').toMatch(re);
       expect('/test.jsx').not.toMatch(re);
     });
 
     it('matches only root paths when specified', () => {
       const re = globToRegex('/path/to/*.js');
       expect('/path/to/test.js').toMatch(re);
       expect('/other/path/to/test.js').not.toMatch(re);
       expect('/path/to/subdir/test.js').not.toMatch(re);
     });
   });
 });
 "
`;

exports[`diff makeConciseFile should make a concise file 1`] = `
" // ...
 describe('glob utilities', () => {
   describe('stripPrefix', () => {
     it('handles trailing slashes', () => {
 // ...
     });
 
     it('should remove prefix from path', () => {
+      expect(true).toBe(false);
       expect(stripPrefix('src', 'src/path.js')).toBe('/path.js');
       expect(stripPrefix('src', './src/path.js')).toBe('/path.js');
       expect(stripPrefix('src', '/path.js')).toBe(undefined);
 // ...
     });
 // ...
   });
 // ...
   describe('globToRegex', () => {
 // ...
     it('should convert simple glob patterns', () => {
 // ...
       expect('/test.js').not.toMatch(re);
       expect('/test.jsx').not.toMatch(re);
     });
-    // TODO: add more test cases
 
     it('should handle directory patterns', () => {
+      expect(true).toBe(false);
       const re = globToRegex('src/*.js');
       expect('/src/test.js').toMatch(re);
       expect('/test.js').not.toMatch(re);
 // ...
     });
 // ...
   });
 });
 // ..."
`;

exports[`diff makeConciseFile should make a concise file for an added file 1`] = `
"+
+import { globToRegex, stripPrefix } from './glob';
+
+describe('glob utilities', () => {
+  describe('stripPrefix', () => {
+    it('handles trailing slashes', () => {
+      expect(stripPrefix('src/', 'src/path.js')).toBe('/path.js');
+      expect(stripPrefix('src/', './src/path.js')).toBe('/path.js');
+      expect(stripPrefix('src/', '/src/path.js')).toBe('/path.js');
+    });
+
+    it('should remove prefix from path', () => {
+      expect(true).toBe(false);
+      expect(stripPrefix('src', 'src/path.js')).toBe('/path.js');
+      expect(stripPrefix('src', './src/path.js')).toBe('/path.js');
+      expect(stripPrefix('src', '/path.js')).toBe(undefined);
+    });
+
+    it('should handle empty prefix', () => {
+      expect(stripPrefix('', 'src/path.js')).toBe('/src/path.js');
+      expect(stripPrefix('', './src/path.js')).toBe('/src/path.js');
+      expect(stripPrefix('', '/src/path.js')).toBe('/src/path.js');
+    });
+
+    it('should handle exact matches', () => {
+      expect(stripPrefix('src', 'src')).toBe('/');
+      expect(stripPrefix('src', './src')).toBe('/');
+      expect(stripPrefix('src', '/src')).toBe('/');
+    });
+
+    it("returns undefined if the path doesn't begin with the prefix specified", () => {
+      expect(stripPrefix('src', 'other/path.js')).toBe(undefined);
+    });
+  });
+
+  describe('globToRegex', () => {
+    it('should convert glob patterns to regex', () => {
+      expect(globToRegex('*.js').test('/test.js')).toBe(true);
+      expect(globToRegex('*.js').test('/test.txt')).toBe(false);
+      expect(globToRegex('**/*.js').test('/src/test.js')).toBe(true);
+      expect(globToRegex('**/src/*.js').test('/src/test.js')).toBe(true);
+      expect(globToRegex('**/*.js').test('/test.js')).toBe(true);
+      expect(globToRegex('**/*.js').test('/src/subdir/test.js')).toBe(true);
+    });
+
+    it('matches everything on empty path', () => {
+      expect(globToRegex('').test('/src/subdir/test.js')).toBe(true);
+      expect(globToRegex('**').test('/src/subdir/test.js')).toBe(true);
+    });
+
+    it('should convert simple glob patterns', () => {
+      const re = globToRegex('*.js');
+      expect('/test.js').toMatch(re);
+      expect('/test.ts').not.toMatch(re);
+      expect('/test.jsx').not.toMatch(re);
+    });
+
+    it('should handle directory patterns', () => {
+      expect(true).toBe(false);
+      const re = globToRegex('src/*.js');
+      expect('/src/test.js').toMatch(re);
+      expect('/test.js').not.toMatch(re);
+      expect('/src/subdir/test.js').not.toMatch(re);
+    });
+
+    it('should handle double star patterns', () => {
+      const re = globToRegex('src/**/*.js');
+      expect('/src/test.js').toMatch(re);
+      expect('/src/subdir/test.js').toMatch(re);
+      expect('/test.js').not.toMatch(re);
+    });
+
+    it('should handle dot files', () => {
+      const re = globToRegex('.env*');
+      expect('/.env').toMatch(re);
+      expect('/.env.local').toMatch(re);
+      expect('/env').not.toMatch(re);
+    });
+
+    it('should handle multiple extensions', () => {
+      const re = globToRegex('*.{js,ts}');
+      expect('/test.js').toMatch(re);
+      expect('/test.ts').toMatch(re);
+      expect('/test.jsx').not.toMatch(re);
+    });
+
+    it('matches only root paths when specified', () => {
+      const re = globToRegex('/path/to/*.js');
+      expect('/path/to/test.js').toMatch(re);
+      expect('/other/path/to/test.js').not.toMatch(re);
+      expect('/path/to/subdir/test.js').not.toMatch(re);
+    });
+  });
+});
+"
`;

exports[`diff makeConciseFile should mark addition lines with + prefix and removal lines with - prefix 1`] = `
" // ...
 describe('glob utilities', () => {
   describe('stripPrefix', () => {
     it('handles trailing slashes', () => {
 // ...
     });
 
     it('should remove prefix from path', () => {
+      expect(true).toBe(false);
       expect(stripPrefix('src', 'src/path.js')).toBe('/path.js');
       expect(stripPrefix('src', './src/path.js')).toBe('/path.js');
       expect(stripPrefix('src', '/path.js')).toBe(undefined);
 // ...
     });
 // ...
   });
 // ...
   describe('globToRegex', () => {
 // ...
     it('should convert simple glob patterns', () => {
 // ...
       expect('/test.js').not.toMatch(re);
       expect('/test.jsx').not.toMatch(re);
     });
-    // TODO: add more test cases
 
     it('should handle directory patterns', () => {
+      expect(true).toBe(false);
       const re = globToRegex('src/*.js');
       expect('/src/test.js').toMatch(re);
       expect('/test.js').not.toMatch(re);
 // ...
     });
 // ...
   });
 });
 // ..."
`;

exports[`diff makeConciseFile should show both additions and removals in different regions 1`] = `
" // ...
 describe('glob utilities', () => {
   describe('stripPrefix', () => {
     it('handles trailing slashes', () => {
 // ...
     });
 
     it('should remove prefix from path', () => {
+      expect(true).toBe(false);
       expect(stripPrefix('src', 'src/path.js')).toBe('/path.js');
       expect(stripPrefix('src', './src/path.js')).toBe('/path.js');
       expect(stripPrefix('src', '/path.js')).toBe(undefined);
 // ...
     });
 // ...
   });
 // ...
   describe('globToRegex', () => {
 // ...
     it('should convert simple glob patterns', () => {
 // ...
       expect('/test.js').not.toMatch(re);
       expect('/test.jsx').not.toMatch(re);
     });
-    // TODO: add more test cases
 
     it('should handle directory patterns', () => {
+      expect(true).toBe(false);
       const re = globToRegex('src/*.js');
       expect('/src/test.js').toMatch(re);
       expect('/test.js').not.toMatch(re);
 // ...
     });
 // ...
   });
 });
 // ..."
`;

exports[`diff parseDiff should parse the diff 1`] = `
{
  "chunks": [
    {
      "diffLines": [
        {
          "afterLine": 9,
          "beforeLine": 9,
          "content": "    });",
          "type": "context",
        },
        {
          "afterLine": 10,
          "beforeLine": 10,
          "content": "",
          "type": "context",
        },
        {
          "afterLine": 11,
          "beforeLine": 11,
          "content": "    it('should remove prefix from path', () => {",
          "type": "context",
        },
        {
          "afterLine": 12,
          "beforeLine": 12,
          "content": "      expect(true).toBe(false);",
          "type": "add",
        },
        {
          "afterLine": 13,
          "beforeLine": 12,
          "content": "      expect(stripPrefix('src', 'src/path.js')).toBe('/path.js');",
          "type": "context",
        },
        {
          "afterLine": 14,
          "beforeLine": 13,
          "content": "      expect(stripPrefix('src', './src/path.js')).toBe('/path.js');",
          "type": "context",
        },
        {
          "afterLine": 15,
          "beforeLine": 14,
          "content": "      expect(stripPrefix('src', '/path.js')).toBe(undefined);",
          "type": "context",
        },
      ],
    },
    {
      "diffLines": [
        {
          "afterLine": 53,
          "beforeLine": 52,
          "content": "      expect('/test.js').not.toMatch(re);",
          "type": "context",
        },
        {
          "afterLine": 54,
          "beforeLine": 53,
          "content": "      expect('/test.jsx').not.toMatch(re);",
          "type": "context",
        },
        {
          "afterLine": 55,
          "beforeLine": 54,
          "content": "    });",
          "type": "context",
        },
        {
          "afterLine": 56,
          "beforeLine": 55,
          "content": "    // TODO: add more test cases",
          "type": "remove",
        },
        {
          "afterLine": 56,
          "beforeLine": 56,
          "content": "",
          "type": "context",
        },
        {
          "afterLine": 57,
          "beforeLine": 57,
          "content": "    it('should handle directory patterns', () => {",
          "type": "context",
        },
        {
          "afterLine": 58,
          "beforeLine": 58,
          "content": "      expect(true).toBe(false);",
          "type": "add",
        },
        {
          "afterLine": 59,
          "beforeLine": 58,
          "content": "      const re = globToRegex('src/*.js');",
          "type": "context",
        },
        {
          "afterLine": 60,
          "beforeLine": 59,
          "content": "      expect('/src/test.js').toMatch(re);",
          "type": "context",
        },
        {
          "afterLine": 61,
          "beforeLine": 60,
          "content": "      expect('/test.js').not.toMatch(re);",
          "type": "context",
        },
      ],
    },
  ],
  "filename": "src/index.test.ts",
}
`;
